Fix matchpoint covering mobile controls

--- a/imports/ui/pages/game.scss
+++ b/imports/ui/pages/game.scss
@@ -100,6 +100,9 @@
 			top: 0;
 			left: 0;
 			z-index: 1;
+			@include horizontal-breakpoint(tablet) {
+				z-index: auto;
+			}
 			opacity: 0;
 			width: 100%;
 			height: 100%;
